--- a/text/master-thesis.tex
+++ b/text/master-thesis.tex
@@ -328,7 +328,7 @@ Do Kafka klastru data zapisují \textit{producenti} a na druhé straně z ní da
 
 \begin{figure}[H]
 	\centering
-    \includegraphics[width=0.65\textwidth, height=0.45\textheight]{images/kafka.png}
+    \includegraphics[width=0.65\textwidth, height=0.45\textheight]{images/kafka.eps}
     \caption{Znázornění základního schématu aplikačního rámce Kafka}
     \label{fig:kafka}
 \end{figure}
@@ -346,7 +346,7 @@ Jak už bylo řečeno dříve analýza událostí bude probíhat na počítačí
 
 \begin{figure}[H]
 	\centering
-    \includegraphics[width=0.55\textwidth, height=0.3\textheight]{images/kafka-impl.png}
+    \includegraphics[width=0.55\textwidth, height=0.3\textheight]{images/kafka-impl.eps}
     \caption{Struktura aplik. rámce Kafka při iniciálním spuštění}
     \label{fig:kafka-impl}
 \end{figure}
@@ -418,7 +418,7 @@ Výhody stromové struktury jsou zřejmé. U každého uzlu se dá zjistit jaké
 
 \begin{figure}[H]
 	\centering
-    \includegraphics[width=1\textwidth, height=0.22\textheight]{images/zookeeper-impl.png}
+    \includegraphics[width=1\textwidth, height=0.22\textheight]{images/zookeeper-impl.eps}
     \caption{Stromová struktura uzlů v ZK při iniciálním spuštění.}
     \label{fig:zookeeper-impl}
 \end{figure}
@@ -454,7 +454,7 @@ Kapitola obsahuje přehlednou tabulku, která konkrétně ukazuje která technol
 
 \begin{figure}[H]
 	\centering
-    \includegraphics[width=.7\linewidth, height=.57\textheight]{images/app-architecture.png}
+    \includegraphics[width=.7\linewidth, height=.57\textheight]{images/app-architecture.eps}
     \caption{Schéma aplikace, které znázorňuje které technologie jsou nasazeny na každém stroji a jaké mají mezi sebou vazby.}
     \label{fig:app-architecture}
 \end{figure}
@@ -590,7 +590,7 @@ V aplikaci je nastaveno výchozí pravidlo, podle kterého se mají data analyzo
 
 \begin{figure}[H]
 	\centering
-    \includegraphics[width=.4\linewidth, height=.18\textheight]{images/app-start.png}
+    \includegraphics[width=.4\linewidth, height=.18\textheight]{images/app-start.eps}
     \caption{Postupné přidávání uzlů do ZK stromu}
     \label{fig:app-start}
 \end{figure}
@@ -606,7 +606,7 @@ Na obrázku \ref{fig:zookeeper-state-1} je vidět příklad, kdy byly pro jemnoz
 
 \begin{figure}[H]
 	\centering
-    \includegraphics[width=.6\linewidth, height=.2\textheight]{images/zookeeper-state-1.png}
+    \includegraphics[width=.6\linewidth, height=.2\textheight]{images/zookeeper-state-1.eps}
     \caption{Ukázka ZK stromu při současné analýze jemnozrných a hrubozrných událostí}
     \label{fig:zookeeper-state-1}
 \end{figure}
@@ -615,7 +615,7 @@ Jak už bylo řečeno dříve, ZooKeeper reprezentuje logickou strukturu. Na obr
 
 \begin{figure}[H]
 	\centering
-    \includegraphics[width=.5\linewidth, height=.3\textheight]{images/kafka-state-1.png}
+    \includegraphics[width=.5\linewidth, height=.3\textheight]{images/kafka-state-1.eps}
     \caption{Ukázka stavu aplik. rámce Kafka při současné analýze jemnozrných a hrubozrných událostí. Zkratky \textit{J} a \textit{H} na obrázku znamenají jemnozrné a hrubozrné události.}
     \label{fig:kafka-state-1}
 \end{figure}
@@ -671,7 +671,7 @@ Z datového objektu na obrázku \ref{fig:data-example-2} jsou pro nás nyní dů
 
 \begin{figure}[H]
 	\centering
-    \includegraphics[width=.65\linewidth, height=.2\textheight]{images/pc-data-distribution.png}
+    \includegraphics[width=.65\linewidth, height=.2\textheight]{images/pc-data-distribution.eps}
     \caption{Znázornění které počítače v testovacím prostředí produkují kritické typy datových objektů. Zbylé dva atributy jsou u každého počítače nastaveny na "neutrální" hodnotu.}
     \label{fig:pc-data-distribution}
 \end{figure}
