--- a/text/master-thesis.tex
+++ b/text/master-thesis.tex
@@ -832,6 +832,7 @@ INFO - Evaluated action will be: STOP_CONSUMER
 \end{center}
 
 \iffalse
+TODO: odstranit odsud komentar, presunout obrazky do prilohy a zminit zde, ze jednotlive textove ukazky je mozne si prohlednout v priloze jako snimky obrazovky
 \begin{figure}[H]
 	\centering
     \includegraphics[width=\linewidth, height=.3\textheight]{images/deploy-rule-screen.png}
